<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quiestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="start"
            android:text="@string/answers"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/percent"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/percent"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/views"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/views"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>